fixed styling for headers and content padding on mobile

--- a/src/app/components/HambugerMenu/HamburgerMenu.module.css
+++ b/src/app/components/HambugerMenu/HamburgerMenu.module.css
@@ -17,3 +17,8 @@
   font-size: 1.2rem;
   font-family: var(--arvo-font);
 }
+
+.navLink{
+      font-size: 18px;
+
+}
